# read-audio

./: .gitignore  Makefile  README.md  flake.nix  pyproject.toml
read_audio/: __init__.py  __main__.py  constants.py  errors.py  logger.py
read_audio/download/: __init__.py
read_audio/helpers/: cli.py
read_audio/providers/: __init__.py  anthropic.py  ollama.py  openai.py  protocol.py
read_audio/transcribe/: whisper.py
read_audio/utils/: audio.py
video_summarizer/: __init__.py  __main__.py  config.py  constants.py  errors.py  logger.py
video_summarizer/download/: youtube.py
video_summarizer/providers/: __init__.py  anthropic.py  ollama.py  openai.py  protocol.py
video_summarizer/summarize/: __init__.py  llama.py
video_summarizer/transcribe/: __init__.py  whisper.py
video_summarizer/utils/: audio.py
