[tool.poetry]
name = "read-audio"
version = "0.1.0"
description = "Video summarization using local ML models"
authors = ["Ivan Kovnatsky <75213+ivankovnatsky@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "read_audio", format = "sdist"}]

[tool.poetry.dependencies]
python = "^3.12"
yt-dlp = "^2025.1.12"
openai-whisper = "20240930"
requests = "^2.31.0"
mlx-whisper = {version = "^0.4.1", platform = "darwin", optional = true}
click = "^8.1.7"
openai = "^1.59.7"
anthropic = "^0.43.0"
pydub = "^0.25.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"

[tool.poetry.scripts]
read-audio = "read_audio.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
macos = ["mlx-whisper"]
